# rover-cpp

./: CMakeLists.txt  README.md
docs/: mqtt-v3.1.1-os.pdf.1  mqtt-v3.1.1-os.pdf.2  wget-log  wget-log.1  wget-log.2
mqtt/: CMakeLists.txt
mqtt/src/: Client.cpp  Client.h  main.cpp
mqtt/src/protocol/: Message.cpp  Message.h  Packet.cpp  Packet.h  Properties.cpp  Properties.h  Protocol.cpp  Protocol.h
platform/: CMakeLists.txt
platform/src/: Logger.h
platform/src/plugin/: ModuleBase.cpp  ModuleBase.h
plugins/system/: CMakeLists.txt
service/: CMakeLists.txt  settings.json
service/src/: MainApplication.cpp
service/src/http/: HttpServer.cpp  HttpServer.h  HttpWorker.cpp  HttpWorker.h
service/src/serial/: SerialManager.h  SerialRpc.h
service/src/subsystem/: Application.cpp  Application.h  LoggerSubsystem.h  SubsystemBase.cpp  SubsystemBase.h
service/www/: CMakeLists.txt
service/www/src/: App.js
service/www/src/components/: Form.js  Game.js
